--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "mapbox-gl": "^2.13.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "5.3.4",
@@ -24,6 +25,8 @@
       "not dead",
       "not op_mini all"
     ],
+    "author": "Mapbox",
+    "license": "MIT",
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
